[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-jarvis"
dynamic = ["version"]
description = 'Train a speech-to-speech model using your own language model'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["speech-to-speech", "llama", "transformers", "llm"]
authors = [
  { name = "John Sutor", email = "johnsutor3@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch",
  "transformers",
]

[project.urls]
Documentation = "https://github.com/johnsutor/llama-jarvis#readme"
Issues = "https://github.com/johnsutor/llama-jarvis/issues"
Source = "https://github.com/johnsutor/llama-jarvis"

[project.optional-dependencies]
dev = [
  "hatch",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",
]

[tool.hatch.version]
path = "src/llama_jarvis/__about__.py"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/llama_jarvis tests}"

[tool.coverage.run]
source_pkgs = ["llama_jarvis", "tests"]
branch = true
parallel = true
omit = [
  "src/llama_jarvis/__about__.py",
]

[tool.coverage.paths]
llama_jarvis = ["src/llama_jarvis", "*/llama-jarvis/src/llama_jarvis"]
tests = ["tests", "*/llama-jarvis/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "SIM"]
